resolved overlapping script problems

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,10 +87,10 @@ a {
   color: rgb(255, 255, 255, 1.0) !important; /*rgb(47, 124, 147) !important; lt blue*/
 }
 
+
 a:visited {
   color: rgba(255,255,255,0.7) !important; /*rgb(0, 77, 100) !important; dk blue*/
 }
-
 
 
 
@@ -653,11 +653,12 @@ pre code {
 }
 
 .container {
-    width: 100%;
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
+  width: auto;
+  max-width: 680px;
+  padding: 0 15px;
+  margin-right: auto;
+  margin-left: auto;
+  bottom:0;
 }
 
 @media (min-width: 576px) {
@@ -2118,16 +2119,12 @@ pre code {
 }
 
 .footer {
-    clear: both;
-    z-index: 1;
     background-color: #2b2e34;
     color: white;
     text-align: center;
-    /**/
-    position:absolute;
-    width:100%;
-    bottom:0;
-    left:0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
 }
 
 .form-control {
@@ -9327,7 +9324,9 @@ a.text-dark:focus {
         min-width: 992px !important;
     }
     .container {
-        min-width: 992px !important;
+        width: auto;
+        max-width: 680px;
+        padding: 0 15px;
     }
     .navbar {
         display: none;
@@ -9348,45 +9347,6 @@ a.text-dark:focus {
     }
 }
 
-* {box-sizing: border-box;}
-
-.searchBox input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-.searchBox button {
-  /* float: right; */
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
-
-.searchBox button:hover {
-  background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .searchBox {
-    float: none;
-  }
-  .searchBox input[type=text], .searchBox button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .searchBox input[type=text] {
-    border: 1px solid #ccc;
-  }
 
 
 /*# sourceMappingURL=bootstrap.css.map */
